--- a/auto_scheduler/Info.plist
+++ b/auto_scheduler/Info.plist
@@ -26,6 +26,10 @@
 	<string>We need access to your calendar in order to help you track events.</string>
 	<key>NSContactsUsageDescription</key>
 	<string>All of your contacts are belong to us...</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
